--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -154,7 +154,9 @@
     <script src="https://code.highcharts.com/highcharts-3d.js"></script>
     <script src="{{ url_for('static', filename='js/function.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.0/jspdf.plugin.autotable.min.js"></script>
+
 
     <script>
         function updateDateTime() {
